# grpc-microservices

./: .gitignore  README.md  about-grpc.md  build.gradle  docker-compose.yaml  go.work  grpcGITHUB  script.sh
client/: client.go
commons/: go.mod
commons/config/: config.go
commons/telemetry/: telemetry.go
order/: go.mod  go.sum
order/cmd/: main.go
order/internal/adapters/db/: db.go  db_test.go
order/internal/adapters/grpc/: order.pb.go  order.validator.pb.go  order_grpc.pb.go  payment.pb.go  payment.validator.pb.go  server.go
order/internal/adapters/payment/: payment.go
order/internal/application/core/api/: api.go  api_test.go
order/internal/application/core/domain/: order.go
order/internal/application/core/middleware/: middleware.go
order/internal/ports/: api.go  db.go  payment.go
payment/: go.mod  go.sum
payment/cmd/: main.go
payment/internal/adapters/db/: db.go
payment/internal/adapters/grpc/: grpc.go  payment_grpc.pb.go  server.go
payment/internal/adapters/sse/: sse.go
payment/internal/ports/: api.go  db.go
proto/: order.proto  payment.proto  script.sh
server/: server.go
src/basic/: docker-compose.yml
src/basic/go_client/: Dockerfile  client.go  go.mod
src/basic/go_server/: Dockerfile  go.mod  script.sh  server.go
src/basic/go_server/basicpb/: Basic.pb.go
src/basic/java/: build.gradle
src/basic/proto/: Basic.proto
src/basic/rust/: Cargo.toml  Dockerfile  build.rs
src/basic/rust/src/basic/: client.rs  pb.rs  server.rs
src/main/docker/: docker-compose-greet.yml  docker-compose.yml
src/main/docker/blog/: docker-compose.yml
src/main/go/blog/: go.mod  go.sum
src/main/proto/blog/: blog.proto
src/main/proto/customer/: Customer.proto
src/main/rust/customerservice/: Cargo.toml  build.rs
src/main/rust/customerservice/src/customerservice/: client.rs  server.rs
tests/: commands  install-tools.sh  order.http  payment.http
todo/: script.sh  todo.pb.go  todo.proto
(+35 files in other folders)
