[package]
name = "customerservice"
version = "0.1.0"
authors = ["48788"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.3.1", features = ["tls"] }
prost = "0.6"
tokio = { version = "0.2", features = ["rt-threaded", "time", "stream", "fs", "macros", "uds"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
async-stream = "0.2"
tower = "0.3"
# Required for routeguide
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"
# Tracing
tracing = "0.1.16"
tracing-subscriber = { version = "0.2", features = ["tracing-log"] }
tracing-attributes = "0.1"
tracing-futures = "0.2"
# Required for wellknown types
prost-types = "0.6"
# Hyper example
#hyper = "0.13"
#warp = { version = "0.2", default-features = false }
http = "0.2"
http-body = "0.3"
#pin-project = "0.4.17"
# Health example
#tonic-health = { path = "../tonic-health" }
#listenfd = "0.3"




[build-dependencies]
tonic-build = "0.3.1"

[[bin]]
name = "server"
path = "src/customerservice/server.rs"

[[bin]]
name = "client"
path = "src/customerservice/client.rs"